@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

class SystemUser {
    name
    email
    password
    phone

}
class Agenda {
}


class AgendaEntry {
    date
    associatedTeam
    associatedVehicleList
}
class Vehicle{
      name
      phone
      birthdate
      admissionDate
      address
      idDocumentType
      idDocumentNumber
      status
}




class ToDoEntry{
    description
         greenSpace
         expectedDuration
         degreeUrgency
         entryStatus
}
class GSM {
}


SystemUser <|- GSM
AgendaEntry"1"-- "1..*" Vehicle: assigned to >
AgendaEntry --|> ToDoEntry
Agenda "1" -- "*" AgendaEntry : has >
GSM"1" - "*" AgendaEntry: manages >
@enduml